<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#1976D2"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/regresar"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btnEs"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/es"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:layout_marginEnd="20dp"/>

        <ImageButton
            android:id="@+id/btnEn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/en"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btnZh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/zh"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btnIt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/it"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/btnFr"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fr"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"/>
    </LinearLayout>
</LinearLayout>
